fix footer alignment

--- a/src/styles/global.scss
+++ b/src/styles/global.scss
@@ -1052,6 +1052,7 @@ footer {
     max-width: $universal-width;
     padding: 3rem 1rem;
     display: flex;
+    margin: auto;
     flex-direction: column;
     gap: 3rem;
   }
